Renomeado método get e criado mais um construtor para Filmes.
Método getClassificacao estava nomeado com letra maiúscula e agora esta com letra minúscula facilitando acha-lo, Filme recebeu duracaoMin como construtor, juntamente com nome e ano de lançamento.